# gnu_plogger

./: .gitignore  AUTHORS  Makefile.am  Vagrantfile  build.xml  configure.ac  install-kawa.sh  ivy.xml
guile/: autogen.sh
guile/plogger/: activities.scm  commands.scm  config.scm.in  db.scm  interruptions.scm  phases.scm  text.scm  times.scm  validations.scm
plogger/: Makefile.am  activities.scm  commands.scm  config.scm.in  db.scm  init.sql  interruptions.scm  issue-types.scm  issues.scm  models.scm  phases.scm  plogger  projects.scm  rdb.scm  task-types.scm  tasks.scm  text.scm  times.scm  validations.scm
src/: cmd.scm  records.scm
src/main/: Main.fxml  MainController.scm  Plogger.scm  PloggerApp.scm  config.scm  records.scm
src/main/java/: FxmlExample.java
src/main/kawa/: cmd.scm  config.scm  db.scm  models.scm
src/main/resources/: Main.fxml
src/test/: config-test.scm  db-test.scm  models-test.scm  records-test.scm
